[gd_scene load_steps=3 format=3 uid="uid://bsatf5hbpv82"]

[ext_resource type="Script" path="res://tooltip.gd" id="1_evjo4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cusu4"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.223529, 0.223529, 0.223529, 0.733333)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Tooltip" type="PanelContainer"]
custom_minimum_size = Vector2(170, 100)
offset_right = 170.0
offset_bottom = 166.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cusu4")
script = ExtResource("1_evjo4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Body Mutant"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Damage" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Damage:"

[node name="Damage2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 14
text = "11
"
horizontal_alignment = 2

[node name="Armor" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Armor:"

[node name="Armor2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 14
text = "11
"
horizontal_alignment = 2

[node name="Health" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Health:"

[node name="Health2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_font_sizes/font_size = 14
text = "11
"
horizontal_alignment = 2

[node name="AttackSpeed" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Attack Speed: "

[node name="AttackSpeed2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_font_sizes/font_size = 14
text = "11
"
horizontal_alignment = 2

[node name="HealthRegen" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Health Regen: "

[node name="HealthRegen2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_font_sizes/font_size = 14
text = "11
"
horizontal_alignment = 2
